--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <title>Title</title>
 </head>
 <body>
-    <input type="text" id="textInput" placeholder="Gib einen Befehl ein">
-    <iframe title="openweb" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=4ea2288a-c649-4f79-936f-d7de471bc42a&autoAuth=true&ctid=41eb501a-f671-4ce0-a5bf-b64168c3705f" frameborder="0" allowFullScreen="true"></iframe>
-</body>
+<iframe title="openweb" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZjA5N2JjYmQtMDIzMy00YWZiLWJkNmUtNzZhZGM3ZWNiOGRhIiwidCI6IjQxZWI1MDFhLWY2NzEtNGNlMC1hNWJmLWI2NDE2OGMzNzA1ZiIsImMiOjN9" frameborder="0" allowFullScreen="true"></iframe></body>
 </html>
