--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe title="BK Google Review Redflags" src="https://app.powerbi.com/view?r=eyJrIjoiN2NlMDdlMDUtNDVkYi00MjZlLTk1MWEtMWQyM2M4NTYyZTRhIiwidCI6IjQxZWI1MDFhLWY2NzEtNGNlMC1hNWJmLWI2NDE2OGMzNzA1ZiIsImMiOjN9" frameborder="0" allowFullScreen="true"></iframe>
+    <iframe title="BK Google Review Redflags" " frameborder="0" allowFullScreen="true"></iframe>
 </body>
 </html>
